# fastapi-with-auth

./: pyproject.toml
data/: database.db
scripts/: create_tables.py  run.py
src/: constants.py
src/api/: brands.py  main.py  users.py
src/api/auth/: main.py
src/api/users/: main.py  schemas.py
src/core/auth/: auth.py  exceptions.py  login.py  passwords.py  schemas.py  tokens.py
src/core/database/: connection.py
src/core/schemas/: brand.py  guitar.py  user.py
