[tool.poetry]
name = "fastapi-with-auth"
version = "0.1.0"
description = ""
authors = ["joyanedel <joyanede@alumnos.inf.utfsm.cl>"]
license = "MIT"
packages = [
    { include = "scripts" }
]

[tool.poetry.scripts]
create-tables = "scripts.create_tables:create_db_and_tables"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
jose = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pytest = "^8.0.2"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]
